<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_item_1">Chuangzhiwei Technology</string>
    <string name="about_item_2">Copyright@2015-2017 Chuangzhiwei Right Reserved</string>
    <string name="about_title">about us</string>
    <string name="account">account number</string>
    <string name="account_or_pwd_error">Incorrect account or password</string>
    <string name="add_clock_title">Add an alarm</string>
    <string name="agin_exit_app">Press again to exit the program</string>
    <string name="agin_ota">OTA failed, retry</string>
    <string name="agree_text">agree</string>
    <string name="aider_function">Go to settings</string>
    <string name="aider_function_tips">Accessibility (some mobile phones can\'t get message push when opening message notification permission, you can try to open accessibility function), click to open accessibility function</string>
    <string name="alert_title">Remind function</string>
    <string name="all_check">One key detection</string>
    <string name="all_permission_title">friendly reminder</string>
    <string name="all_permission_title_message">For a better experience, please grant these permissions to the app.</string>
    <string name="already_last_version">Already the latest version</string>
    <string name="and">with</string>
    <string name="app_name">QMUI</string>
    <string name="app_name_sk">Smart King</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_code">Verification code</string>
    <string name="background_run">Background process</string>
    <string name="bind_dialog_content">Are you sure you want to bind this device?</string>
    <string name="ble_is_disconn">The Bluetooth connection has been disconnected, please connect first!</string>
    <string name="blood">blood pressure</string>
    <string name="blood_title">Blood pressure testing</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="camera_save_success">Save to:</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_for_update">Check for updates</string>
    <string name="check_wifi_notice">Current net type is not Wifi, Whether to continue</string>
    <string name="china_86">China (+86)</string>
    <string name="choice_area">country / region</string>
    <string name="clock">Clock</string>
    <string name="clock_name">Alarm name</string>
    <string name="clock_title">Intelligent Clock</string>
    <string name="close">Close</string>
    <string name="common_problem">common problem</string>
    <string name="company_name">Shenzhen Chuangzhiwei Technology Co., Ltd.</string>
    <string name="conn">connection</string>
    <string name="conn_failure">Connection failed</string>
    <string name="conn_failure_not_near">The connection failed. Please confirm that the device is not connected and the device and mobile phone are as close as possible.</string>
    <string name="conn_success">connection succeeded</string>
    <string name="continue_text">carry on</string>
    <string name="current_blood">Current blood pressure</string>
    <string name="current_blood_format">%1$s/%2$smmHg</string>
    <string name="current_hr">Current heart rate</string>
    <string name="current_ox">Current blood oxygen</string>
    <string name="default_filedownloader_notification_content">FileDownloader is running.</string>
    <string name="default_filedownloader_notification_title">FileDownloader</string>
    <string name="delete">delete</string>
    <string name="device_conn">Connecting device, please wait...</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_foreground_content">Update in progress…</string>
    <string name="dfu_status_foreground_title">Device Firmware Update</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dis_conn">disconnect</string>
    <string name="disagree_text">disagree</string>
    <string name="get_auth_code">get verification code</string>
    <string name="help_1">1. Connecting the bracelet</string>
    <string name="help_1_1">        Turn on the Bluetooth function of the mobile phone, click the setting of the smart king client---my device---add the device, then the mobile phone will automatically search for the wristband device. When the device is in the normal power-on state, the device name will appear. Click the device name to connect. can.</string>
    <string name="help_2">2. Can\'t connect?</string>
    <string name="help_2_1">        When the device is still unable to find the device near the phone, please check if the device is turned on or the battery is exhausted. If you search for the device and the device name appears, but you can\'t connect it, try turning the phone\'s Bluetooth function off and then on again, or Restart your phone. If your phone is connected to another bracelet before, be sure to delete or disconnect and then search for a new bracelet.</string>
    <string name="help_3">3. Description of the step data and sleep monitoring data</string>
    <string name="help_3_1">        When you find that the step data is not synchronized with the bracelet, or the smart king software step data is not updated, please try to manually synchronize the data, sometimes the bracelet storage data is too large, it takes a certain time for Bluetooth to automatically update the data. In addition, we use the motion sensor to collect the step data in real time, compare the personal setting information such as the height and height of men and women, and convert and analyze the closest to the real step counter environment, so as to distinguish between different actions such as running, jogging and walking. . When the bracelet starts Bluetooth connection, the bracelet does not count the number of movement steps at the beginning of the action. Only when you actually walk for dozens of times, the device starts to recognize the motion state and starts counting the steps, so you will find When the bracelet is worn for the first time, the wristband does not count. In addition, sleep monitoring is also through a motion sensor in the wristband device to capture data analysis, so to test the sleep data, you must first wear a bracelet and then go to sleep, sleep data is designed for the night sleep state, so Only sleep conditions at night can be monitored and sleep data cannot be tested during the day.</string>
    <string name="help_4">4. Install Smart King APP/APK requirements for mobile phone system</string>
    <string name="help_4_1">        The mobile phone must be Android 4.3 and ios8.2 or higher to install the software and connect the bracelet device.</string>
    <string name="ok">Ok</string>
    <string name="pwd_6_16">6-16 digits password</string>
    <string name="setting_item_1">Profile Setting</string>
    <string name="setting_item_10">Sedentary reminder time</string>
    <string name="setting_item_2">Add device</string>
    <string name="setting_item_3">Change Password</string>
    <string name="setting_item_4">Intelligent anti lost</string>
    <string name="setting_item_5">Intelligent clock</string>
    <string name="setting_item_6">Search bracelet</string>
    <string name="setting_item_7">Shark Take Photo</string>
    <string name="setting_item_8">Notification</string>
    <string name="setting_item_9">Raise your hand bright screen</string>
    <string name="user_age">age</string>
    <string name="user_header">Avatar</string>
    <string name="user_height">height</string>
    <string name="user_nickname">nickname</string>
    <string name="user_sex">gender</string>
    <string name="user_step_length">Step width</string>
    <string name="user_target_step">Target steps</string>
    <string name="user_weight">body weight</string>
    <string name="week_1">M</string>
    <string name="week_2">T</string>
    <string name="week_3">W</string>
    <string name="week_4">T</string>
    <string name="week_5">F</string>
    <string name="week_6">S</string>
    <string name="week_7">S</string>
    <string name="week_cycle">week</string>
</resources>