<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#eee"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/include_title"/>
    <View
        android:background="#aaa"
        style="@style/hline"/>
    <TextView
        android:layout_margin="@dimen/DIMEN_20PX"
        android:text="@string/clock_name"
        style="@style/warp"/>
    <View
        android:background="#aaa"
        style="@style/hline"/>
    <EditText
        android:id="@+id/clockName"
        android:background="@color/white"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_96PX"
        android:hint="@string/clock"
        android:paddingStart="@dimen/DIMEN_30PX"/>
    <View style="@style/hline"/>
    <TimePicker
        android:id="@+id/timePicker"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DIMEN_40PX"/>
    <View style="@style/hline"/>
    <TextView
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:text="@string/week_cycle"
        android:layout_marginStart="12dp"/>
    <View style="@style/hline"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="6dp"
        android:layout_toLeftOf="@+id/swEnable"
        android:layout_marginStart="12dp"
        android:layout_toStartOf="@+id/swEnable">
        <RelativeLayout style="@style/clock_time_checkbox_layout">
            <CheckBox
                android:id="@+id/week_1"
                android:text="@string/week_1"
                style="@style/clock_time_checkbox_big"/>
        </RelativeLayout>
        <RelativeLayout style="@style/clock_time_checkbox_layout">
            <CheckBox
                android:id="@+id/week_2"
                android:text="@string/week_2"
                style="@style/clock_time_checkbox_big"/>
        </RelativeLayout>
        <RelativeLayout style="@style/clock_time_checkbox_layout">
            <CheckBox
                android:id="@+id/week_3"
                android:text="@string/week_3"
                style="@style/clock_time_checkbox_big"/>
        </RelativeLayout>
        <RelativeLayout style="@style/clock_time_checkbox_layout">
            <CheckBox
                android:id="@+id/week_4"
                android:text="@string/week_4"
                style="@style/clock_time_checkbox_big"/>
        </RelativeLayout>
        <RelativeLayout style="@style/clock_time_checkbox_layout">
            <CheckBox
                android:id="@+id/week_5"
                android:text="@string/week_5"
                style="@style/clock_time_checkbox_big"/>
        </RelativeLayout>
        <RelativeLayout style="@style/clock_time_checkbox_layout">
            <CheckBox
                android:id="@+id/week_6"
                android:text="@string/week_6"
                style="@style/clock_time_checkbox_big"/>
        </RelativeLayout>
        <RelativeLayout style="@style/clock_time_checkbox_layout">
            <CheckBox
                android:id="@+id/week_7"
                android:text="@string/week_7"
                style="@style/clock_time_checkbox_big"/>
        </RelativeLayout>
    </LinearLayout>
    <View style="@style/hline"/>
</LinearLayout>
