<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#eeeeee"
    style="@style/match_v">
    <include layout="@layout/include_title"/>
    <LinearLayout
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/phoneLayout"
            android:background="#fff"
            style="@style/user_reg_layout">
            <TextView
                android:textColor="#909090"
                android:gravity="center"
                android:id="@+id/refCode"
                android:paddingLeft="10dp"
                android:minWidth="@dimen/DIMEN_100PX"
                android:text="@string/choice_area"
                android:layout_centerVertical="true"
                android:paddingStart="10dp"
                style="@style/warp"/>
            <TextView
                android:textColor="#1f93c2"
                android:gravity="center_vertical"
                android:id="@+id/codeTv"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="12dp"
                android:text="@string/china_86"
                android:layout_toRightOf="@+id/refCode"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="12dp"
                android:layout_toEndOf="@+id/refCode"
                style="@style/match"/>
        </RelativeLayout>
        <View style="@style/user_line"/>
        <RelativeLayout style="@style/user_reg_layout">
            <EditText
                android:id="@+id/hint_reg_type"
                android:hint="@string/account"
                style="@style/user_reg_layout_edit"/>
            <View style="@style/user_line"/>
        </RelativeLayout>
        <RelativeLayout style="@style/user_reg_layout">
            <EditText
                android:id="@+id/hint_reg_code"
                android:layout_marginRight="6dp"
                android:hint="@string/auth_code"
                android:layout_toLeftOf="@+id/auth_code"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="6dp"
                android:layout_toStartOf="@+id/auth_code"
                style="@style/user_reg_layout_edit"/>
            <TextView
                android:textColor="#fff"
                android:id="@+id/auth_code"
                android:text="@string/get_auth_code"
                style="@style/user_auth_code"/>
            <View style="@style/user_line"/>
        </RelativeLayout>
        <RelativeLayout style="@style/user_reg_layout">
            <EditText
                android:id="@+id/et_pwd"
                android:hint="@string/pwd_6_16"
                android:password="true"
                style="@style/user_reg_layout_edit"/>
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:textSize="18sp"
        android:textColor="#fff"
        android:id="@+id/sureBtn"
        android:background="@drawable/blue_view_back"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/ok"
        android:layout_centerInParent="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        style="?android:attr/borderlessButtonStyle"/>
</LinearLayout>
